# qt1_task_final

./: Algorithm.js  CMakeLists.txt  Line.qml  LineEdit.qml  Main.cpp  Main.qml  Polygon.cpp  Polygon.h  Polygon.qml  PolygonListModel.cpp  PolygonListModel.h  Resources.qrc  _BUG_list.txt  _DEV_list.txt  _TODO_list.txt
